# Geodesic-THRML

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
geodesic_thrml/: __init__.py  capsules.py  controller.py  controller_thrml.py  curriculum.py  curriculum_thrml.py  diagnostics.py  invariants.py  sampling.py  scores.py  types.py
geodesic_thrml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geodesic_thrml/bridges/: __init__.py  ecan.py  moses.py  pln.py  quantimork.py
tests/: test_bridges.py  test_capsules.py  test_controller.py  test_controller_thrml.py  test_curriculum.py  test_curriculum_thrml.py  test_diagnostics.py  test_invariants.py  test_sampling.py  test_scores.py
